<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.grapwr.GameActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayoutGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/checkboxesContainerGame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGame1"
            android:orientation="vertical"
            android:gravity="left" >
        </LinearLayout>

        <Button
            android:id="@+id/buttonGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/checkboxesContainerGame1"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/textViewGame2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonGame1"
            android:layout_marginTop="12dp"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewGame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewGame2"
            android:layout_marginTop="12dp"
            android:text="@string/good_to_bad"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/progressBarGame1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewGame3"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:progressDrawable="@drawable/game_progressbar" />

        <TextView
            android:id="@+id/textViewGame4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarGame1"
            android:layout_marginTop="12dp"
            android:text="@string/known"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/progressBarGame2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textViewGame4"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:progressDrawable="@drawable/game_progressbar" />

    </RelativeLayout>

</ScrollView>
